--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -19,7 +19,7 @@
     <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
     <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
     <li><a href="/accounts" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
+    <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
   </ul>
   <script>
     document.getElementById("userId").value = localStorage.getItem("userId");
