--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,7 +21,7 @@
         <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
         <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
         <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-        <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
+        <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
       </ul>
 
       
