--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,4 +33,6 @@
         <input placeholder="Brugernavn">
         <input placeholder="Adgangskode">
     </div>
+    <br>
+    <button id="gemÆndringer_id">Gem ændringer</button>
 </body>
