--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,10 +28,10 @@
         <hr>
         <input placeholder="Fornavn"><input placeholder="Efternavn">
         <br>
-        <input placeholder="e-mail" style="width: 335px;">
+        <input placeholder="e-mail" style="width: 310px;">
         <hr>
-        <input placeholder="Brugernavn">
-        <input placeholder="Adgangskode">
+        <input placeholder="Brugernavn" id="brugernavn_id">
+        <input placeholder="Adgangskode" id="adgangskode_id">
     </div>
     <br>
     <button id="gemÆndringer_id">Gem ændringer</button>
