--- a/public/accounts_style.css
+++ b/public/accounts_style.css
@@ -1,37 +1,45 @@
-body{
-    margin: 0;
-    background-color: #121212;
-    color: lightgray;
+/* General styling */
+body {
+  margin: 0;
+  background-color: #121212;
+  color: lightgray;
+  font-family: Arial, sans-serif;
 }
+
 @font-face {
   font-family: normalSkrift;
   src: url(/fonts/Bierstadt.ttf);
 }
-#topBar_id{
+
+/* Top Bar */
+#topBar_id {
   width: 100%;
   background-color: #5F45A0;
   display: block;
   position: relative;
 }
-h1{
-    display: inline-block;
-    background-color: #5F45A0;
-    color: white;
-    margin: 0;
-    font-family: Bahnschrift;
-    padding: 0.8%;
-    font-weight: normal;
+
+h1 {
+  display: inline-block;
+  background-color: #5F45A0;
+  color: white;
+  margin: 0;
+  font-family: Bahnschrift;
+  padding: 0.8%;
+  font-weight: normal;
 }
-#topBar_goBack_id{
+
+#topBar_goBack_id {
   display: inline;
   color: white;
   position: absolute;
-    top: 50%;
-    right: 0; /* Placerer elementet til højre */
-    transform: translateY(-50%);
-    font-size: 200%;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 200%;
 }
 
+/* Side Navigation */
 ul {
   list-style-type: none;
   padding: 0;
@@ -44,38 +52,104 @@ ul {
   padding-right: 15px;
 }
 
-.material-symbols-outlined {
-  vertical-align: middle;
-}
-
-li a 
-{
+li a {
   text-decoration: none;
   display: block;
   font-family: normalSkrift;
   color: lightgray;
 }
-li a span{
+
+li a span {
   font-size: 100px;
   display: block;
   color: lightgray;
   font-size: 200% !important;
-  
   padding-right: 15px;
   padding-top: 17px;
   padding-bottom: 17px;
-  
 }
 
-li a:hover, 
+li a:hover,
 li a:hover span {
-color: gray;
+  color: gray;
 }
-  #stockBox_id{
-      width: 37%;
-      border: 2px solid lightgray;
-      display: inline-block;
-      margin-top: 2.7%;
-      padding: 0px;
-      
-  }
+
+/* Main Content */
+#mainContent {
+  margin-left: 20%;
+  margin-right: 8%; /* Tilføjet for at skabe symmetri */
+  padding: 20px;
+}
+
+#accountsContainer {
+  margin-bottom: 20px;
+}
+
+.account {
+  background-color: #252525;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+}
+
+.account h3 {
+  margin: 0;
+  font-size: 20px;
+}
+
+.account p {
+  margin: 5px 0;
+}
+
+.account button {
+  margin-right: 10px;
+  padding: 10px 15px;
+  background-color: #5F45A0;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.account button:hover {
+  background-color: #4a3680;
+}
+
+/* Opret ny konto */
+#createAccountContainer {
+  margin-top: 30px;
+  margin-right: 60%/* Matcher venstre margin */
+   /* Matcher højre margin */
+}
+
+#createAccountContainer form {
+  display: flex;
+  flex-direction: column;
+}
+
+#createAccountContainer label {
+  margin-top: 15px;
+}
+
+#createAccountContainer input {
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  background-color: #252525;
+  color: lightgray;
+}
+
+#createAccountContainer button {
+  margin-top: 15px;
+  padding: 10px 15px;
+  background-color: #5F45A0;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#createAccountContainer button:hover {
+  background-color: #4a3680;
+}
