--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
         <input type="submit" value="Bekræft">
       </div>
       <div class="text">
-        <h3>Har du allerede en konto? <a href="/login">Login her</a></h3>
+        <h3>Har du allerede en konto? <a href="/index">Login her</a></h3>
       </div>
     </form>
   </div>
