--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,17 +6,29 @@
       <link rel="stylesheet" href="index_style.css">
    </head>
    <body>
-      <br><br>
-      <h1>PortfolioTracker</h1>
-      <h3>Investeringsplatformen for studerende</h3>
+      <div id="topBar_id">
+         <h1>PORTFOLIOTRACKER</h1>
+     </div>
 
-      <br><br>
-
-      <div class="top-right-buttons">
-         <a href="login" class="button">Login</a>
-         <a href="signup" class="button">Opret Konto</a>
-       </div>
-
-      
+      <div class="wrapper">
+         <h2>Log ind</h2>
+         <form action="/login" method="POST">
+            <div class="field">
+               <label>Brugernavn</label>
+               <input type="text" name="username" required>
+            </div>
+            <div class="field">
+               <label>Kodeord</label>
+               <input type="password" name="password" required>
+   
+            </div>
+            <div class="field">
+               <input type="submit" value="Login">
+            </div>
+            <div class="signup-link">
+               Ikke oprettet endnu? <a href="signup">Opret konto</a>
+            </div>
+         </form>
+      </div>
    </body>
 </html>
