--- a/public/trade_style.css
+++ b/public/trade_style.css
@@ -102,4 +102,21 @@ li a:hover span {
       color: dodgerblue !important;
       font-weight: bold;
   }
-  
+  #vælgMarked_id{
+    display: inline-block;
+    margin-top: 35px;
+    font-size: 0;
+  }
+  #vælgMarked_id button{
+    outline: none;
+    border: none;
+    font-family: normalSkrift;
+    background-color: lightgray;
+    display: inline-block;
+    font-size: 16px;
+    width: 115px;
+    padding: 5px 0px 5px 0px;
+  }
+  #vælgMarked_id button:hover{
+    cursor:pointer;
+  }
