--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,6 +6,7 @@
     <title>Portfoliotracker - Dashboard</title>
     <link href="dashboard_style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
@@ -61,9 +62,8 @@
 
       <!-- Graf over samlet værdi -->
       <div id="samletVærdi_boks_id">
-        <span>Samlet værdi</span>
-        <hr>
-        <canvas id="myChart"></canvas>
+        <div id="chart"></div>
+        
       </div>
 
       <!-- Top 5 værdipapirer -->
@@ -171,8 +171,8 @@ const currentDate = new Date();
 // Create an array to hold the dates
 const datesArray = [];
 
-// Loop from 30 days ago up to the current date
-for (let i = 0; i <= 14; i++) {
+// Loop from 0-13 days ago up to the current date
+for (let i = 0; i <= 13; i++) {
     const tempDate = new Date();
     tempDate.setDate(currentDate.getDate() - i); // Set the date to be `i` days before today
     datesArray.push(tempDate.toISOString().split('T')[0]); // Add the date to the array in YYYY-MM-DD format
@@ -182,91 +182,96 @@ console.log(datesArray);
 const flippedArray = datesArray.reverse();
 
   const xValues = flippedArray;
-  
-  new Chart("myChart", 
-  {
-    type: "line",
-    data: {
-      labels: xValues,
-      datasets: [{
-        data: [1000,1210,990,1430,1300,1320,1290,1540,760,1000,1210,990,1403,1300,1302,1290,1540,760,1000,1210,990,1403,1300,1302,1290,1540,760,1000,1209,1540,760],
-        borderColor: "blue",
-        fill: false
-      }]
-    },
-    options: 
-    {
-      legend: {display: false,
+console.log(xValues);
+
+
+const options = {
+      chart: {
+        type: 'line',
+        height: 350,
+        fontFamily: 'normalSkrift'
       },
-      maintainAspectRatio: false,
-      responsive: true,
+      colors: ['blue'], // Graflinje farve
       
-      scales:
-      {
-        yAxes: [{
-            ticks: {
-                beginAtZero: true
-            }
-        }]
+      series: [{
+        name: 'Aktiekurs',
+        data: [150, 152, 149, 155, 160, 162, 158, 161,150,155,143,148,167,169]
+      }],
+      xaxis: {
+        categories: xValues,
+        labels: {
+          style: {
+            colors: '#fff' // Tekstfarve på x-aksen
+          }
+        },
+        title: {
+          text: 'Ugedage',
+          style: {
+            color: 'lightgray'
+          }
         }
-      }
-  });
+      },
+      yaxis: {
+        labels: {
+          style: {
+            colors: 'lightgray' // Tekstfarve på y-aksen
+          }
+        },
+        title: {
+          text: 'Kurs (DKK)',
+          style: {
+            color: 'lightgray'
+          }
+        }
+      },
+      title: {
+        text: 'Samlet værdi',
+        align: 'left',
+        style: {
+          color: 'lightgray'
+        }
+      },
+      stroke: {
+        curve: 'smooth'
+      },
 
-  new Chart("myChart2", 
-  {
-    type: "line",
-    data: {
-      labels: xValues,
-      datasets: [{
-        data: [110,91,109,83,90,72,89,110,130,99],
-        borderColor: "blue",
-        fill: false
-      }]
-    },
-    options: 
-    {
-      legend: {display: false}
-    }
-  });
 
-
-
-
-
-
-
-  var xValues_pie = ["AAPL", "GOOG", "AMZN", "IBM", "boi", "e", "a", "b", "p", "g", "ss", "br", "gh", "peach"];
-var yValues_pie = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10];
-var barColors = [
-  "purple",
-  "green",
-  "dodgerblue",
-  "red",
-  "darkgreen",
-  "orange",
-  "yellow",
-  "darkblue",
-  "hotpink",
-  "white",
-  "black",
-  "brown",
-  "gray",
-  "peach"
-];
-
-new Chart("myChart_pie", {
-  type: "pie",
-  data: {
-    labels: xValues_pie,
-    datasets: [{
-      backgroundColor: barColors,
-      data: yValues_pie
-    }]
-  },
-  options: {
-    title: {
-      display: false
+      tooltip: {
+        theme: 'dark',
+        style: {
+          fontSize: '14px',
+          fontFamily: 'normalSkrift',
+          backgroundColor: 'black'
+        },
+        marker: {
+          show: true,
+          fillColors: ['blue']
+        },
+  y: {
+    formatter: function (value) {
+      return value + " DKK";
     }
   }
-});
+},
+
+grid: {
+  show: true, // sæt til false hvis du vil skjule alle gitterlinjer
+  borderColor: 'gray', // farven på linjerne
+  strokeDashArray: 4, // gør dem stiplede (0 = fuldt optrukket)
+  xaxis: {
+    lines: {
+      show: false // fjerner vertikale linjer
+    }
+  },
+  yaxis: {
+    lines: {
+      show: true // viser horisontale linjer
+    }
+  }
+}
+
+    };
+
+    const chart = new ApexCharts(document.querySelector("#chart"), options);
+    chart.render();
   </script>
