--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -77,10 +77,11 @@
         font-family: bahnschrift;
         float: right;
         padding:10px;
-        width: 100%;
+        width: 97%;
         height: 395px;
         border-radius: 13px;
         margin-top: -40px;
+        margin-right: 3%;
     }
     #viewStock_id p{
         font-family: normalskrift;
@@ -369,13 +370,35 @@ function retrieveStockTicker(ticker) {
 }
 
 
+let dates = [];
+
+function get14days(){
+  
+const today = new Date();
+
+for (let i = 0; i < 14; i++) {
+  const date = new Date();
+  date.setDate(today.getDate() - i);
+
+  const day = date.getDay(); // 0 = Sunday, 6 = Saturday
+  if (day !== 0 && day !== 6) {
+    const formatted = date.toISOString().split('T')[0];
+    dates.push(formatted);
+  }
+}
+dates.reverse(); // optional: to have oldest to newest
+console.log(dates);
+
+}
+get14days();
+
 
 function displayStock(){
 
 
   document.getElementById("myChart").innerHTML = "";
 
-  const xValues = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21];
+  const xValues = dates;
 const options = {
       chart: {
         type: 'line',
