--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -67,16 +67,18 @@
                 <p style="color:red;">Kontoen er lukket den <%= account.closed_at.toISOString().split("T")[0] %>
                 </p>
                 <% } %>
-                  <button class="deposit-account">Indbetal</button>
-                  <button class="withdraw-account">Udbetal</button>
-                  <form action="/close-account" method="POST" style="display:inline;">
-                    <input type="hidden" name="accountId" value="<%= account.id %>">
-                    <button type="submit" class="close-account">Luk Konto</button>
-                  </form>
-                  <form action="/reopen-account" method="POST" style="display:inline;">
-                  <input type="hidden" name="accountId" value="<%= account.id %>">
-                  <button type="submit" class="reopen-account">Genåbn Konto</button>
-                </form>
+                  <% if (!account.closed_at) { %>
+                    <button class="deposit-account">Indbetal</button>
+                    <button class="withdraw-account">Udbetal</button>
+                    <% } %>
+                      <form action="/close-account" method="POST" style="display:inline;">
+                        <input type="hidden" name="accountId" value="<%= account.id %>">
+                        <button type="submit" class="close-account">Luk Konto</button>
+                      </form>
+                      <form action="/reopen-account" method="POST" style="display:inline;">
+                        <input type="hidden" name="accountId" value="<%= account.id %>">
+                        <button type="submit" class="reopen-account">Genåbn Konto</button>
+                      </form>
             </div>
             <% }) %>
               <% } %>
