--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -26,7 +26,7 @@
 
     <div class="container">
         <div class="header">
-            <h2>Portefølje oversigt</h2>
+            <h2>Portfolios</h2>
             <button style="background: #333; color: white; padding: 10px; border: none; border-radius: 5px;">Tilføj
                 Portefølje</button>
         </div>
