--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -41,6 +41,18 @@
         </div>
         <div id="StockPurchaseInfo_id">
           <input id="NumberOfStocks_id" type="number" max="99999" min="1" placeholder="1">
+          <select name="Vælg portefølje" id="vælgPortefølje_id">
+            <option value="">Vælg portefølje</option>
+            <option value="">Tech</option>
+            <option value="">Food</option>
+            <option value="">Defence</option>
+          </select>
+          <select name="vælg konto" id="vælgKonto_id">
+            <option value="">Vælg konto</option>
+            <option value="">Gamerkonto</option>
+            <option value="">Børnepenge</option>
+            <option value="">Madpenge</option>
+          </select>
           <button id="BuyStockButton_id">Purchase</button>
         </div>
       </div>
