--- a/public/trade_style.css
+++ b/public/trade_style.css
@@ -202,3 +202,18 @@ li a:hover span {
 .blue-text{
   color: blue;
 }
+
+#vælgKonto_id{
+  font-family: normalSkrift;
+  border: none;
+  outline: none;
+  background-color: lightgray;
+  height: 33px;
+}
+#vælgPortefølje_id{
+  font-family: normalSkrift;
+  border: none;
+  outline: none;
+  background-color: lightgray;
+  height: 33px;
+}
