--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -49,10 +49,6 @@
           <p>Bank: Danske Bank</p>
           <button class="deposit-account">Indbetal</button>
           <button class="withdraw-account">Udbetal</button>
-          <form action="/close-account" method="POST" style="display:inline;">
-            <input type="hidden" name="accountId" value="<%= account.id %>">
-            <button type="submit" class="close-account">Luk Konto</button>
-          </form>
           <button class="reopen-account">Genåbn Konto</button>
         </div>
         <% } else { %>
@@ -94,6 +90,7 @@
     <div id="createAccountContainer">
       <h2>Opret ny konto</h2>
       <form action="/create-account?userId=<%= userId %>" method="POST">
+        <input type="hidden" name="userId" value="<%= userId %>">
         <label>Kontonavn:</label>
         <input type="text" name="name" required>
         <label>Valuta:</label>
