--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -12,17 +12,19 @@
 </head>
 
 <body>
+      <!-- Top Bar og logout knap -->
     <div id="topBar_id">
         <h1>PORTFOLIOTRACKER</h1>
         <form action="/logout" method="POST" style="display: inline;">
-          <button type="submit" id="logoutButton" title="Log ud">
-            <span class="material-symbols-outlined">
-              account_circle_off
-            </span>
-          </button>
-        </form> 
-      </div>
+            <button type="submit" id="logoutButton" title="Log ud">
+                <span class="material-symbols-outlined">
+                    account_circle_off
+                </span>
+            </button>
+        </form>
+    </div>
 
+     <!-- Side navigation -->
     <ul>
         <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
         <li><a href="/portfolios" style="color: gray;"><span class="material-symbols-outlined"
