--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,12 +30,10 @@
     </ul>
 
     <div id="profileBox_id">
-        <h2 id="fornavn_efternavn_id">Fornavn Efternavn</h2>
-        <hr>
-        <input placeholder="Fornavn"><input placeholder="Efternavn">
-        <br>
+      <h2 id="profiloplysninger_id">Profiloplysninger</h2>
+      <hr>
         <input placeholder="e-mail" style="width: 310px;">
-        <hr>
+        <br>
         <input placeholder="Brugernavn" id="brugernavn_id">
         <input placeholder="Adgangskode" id="adgangskode_id">
     </div>
