--- a/public/profile_style.css
+++ b/public/profile_style.css
@@ -102,7 +102,7 @@ li a:hover span {
 #profileBox_id h2{
     margin: 10px;
 }
-#fornavn_efternavn_id{
+#profiloplysninger_id{
   
     font-family: normalskrift;
     color: lightgray;
