URL User-id håndtering

--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Transaktionsoversigt</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/transactions_style.css">
 </head>
 <body>
   <h1>Transaktioner for konto: <%= account.name %></h1>
