--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -26,12 +26,11 @@
 
     <!-- Side navigation -->
     <ul>
-        <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
-        <li><a href="/portfolios" style="color: gray;"><span class="material-symbols-outlined"
-                    style="color: gray;">folder_open</span>Portfolios</a></li>
-        <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-        <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-        <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
+        <li><a href="/dashboard?userId=<%= userId %>"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
+        <li><a href="/portfolios?userId=<%= userId %>" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">folder_open</span>Portfolios</a></li>
+        <li><a href="/trade?userId=<%= userId %>"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+        <li><a href="/accounts?userId=<%= userId %>"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
+        <li><a href="/profile?userId=<%= userId %>"><span class="material-symbols-outlined">person</span>Profile</a></li>
     </ul>
 
     <div class="container">
