--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,11 +22,11 @@
       </div>
 
     <ul>
-        <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
-        <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-        <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-        <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-        <li><a href="/profile" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">person</span>Profile</a></li>
+        <li><a href="/dashboard?userId=<%= userId %>"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
+        <li><a href="/portfolios?userId=<%= userId %>"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
+        <li><a href="/trade?userId=<%= userId %>"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+        <li><a href="/accounts?userId=<%= userId %>"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
+        <li><a href="/profile?userId=<%= userId %>" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">person</span>Profile</a></li>
     </ul>
 
     <div id="profileBox_id">
