--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -26,14 +26,14 @@
 
 
   <ul>
-    <li><a href="/dashboard?userId=<%= userId %>" style="color: gray;"><span class="material-symbols-outlined"
+    <li><a href="/dashboard" style="color: gray;"><span class="material-symbols-outlined"
           style="color: gray;">dashboard</span>Dashboard</a></li>
-    <li><a href="/portfolios?userId=<%= userId %>"><span
+    <li><a href="/portfolios"><span
           class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-    <li><a href="/trade?userId=<%= userId %>"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-    <li><a href="/accounts?userId=<%= userId %>"><span
+    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+    <li><a href="/accounts"><span
           class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="/profile?userId=<%= userId %>" style="color: gray;"><span class="material-symbols-outlined">person</span>Profile</a></li>
+    <li><a href="/profile" style="color: gray;"><span class="material-symbols-outlined">person</span>Profile</a></li>
   </ul>
 
 
