--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -25,14 +25,14 @@
 
   <!-- Side Navigation -->
   <ul>
-    <li><a href="/dashboard?userId=<%= userId %>"><span class="material-symbols-outlined">dashboard</span>Dashboard</a>
+    <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a>
     </li>
-    <li><a href="/portfolios?userId=<%= userId %>"><span
+    <li><a href="/portfolios"><span
           class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-    <li><a href="/trade?userId=<%= userId %>"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-    <li><a href="/accounts?userId=<%= userId %>" style="color: gray;"><span class="material-symbols-outlined"
+    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+    <li><a href="/accounts" style="color: gray;"><span class="material-symbols-outlined"
           style="color: gray;">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="/profile?userId=<%= userId %>"><span class="material-symbols-outlined">person</span>Profile</a></li>
+    <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
   </ul>
 
   <!-- Main Content -->
@@ -71,23 +71,23 @@
                 <% } %>
                   <% if (!account.closed_at) { %>
                     <!-- Indbetalingsformular. -->
-                    <form action="/deposit?userId=<%= userId %>" method="POST" style="display:inline;">
+                    <form action="/deposit" method="POST" style="display:inline;">
                       <input type="hidden" name="accountId" value="<%= account.id %>">
                       <input type="number" name="amount" placeholder="Beløb" required>
                       <button type="submit" class="deposit-account">Indbetal</button>
                     </form>
                     <!-- Udbetalingsformular. -->
-                    <form action="/withdraw?userId=<%= userId %>" method="POST" style="display:inline;">
+                    <form action="/withdraw" method="POST" style="display:inline;">
                       <input type="hidden" name="accountId" value="<%= account.id %>">
                       <input type="number" name="amount" placeholder="Beløb" step="0.01" required>
                       <button type="submit" class="withdraw-account">Udbetal</button>
                     </form>
                     <% } %>
-                      <form action="/close-account?userId=<%= userId %>" method="POST" style="display:inline;">
+                      <form action="/close-account" method="POST" style="display:inline;">
                         <input type="hidden" name="accountId" value="<%= account.id %>">
                         <button type="submit" class="close-account">Luk Konto</button>
                       </form>
-                      <form action="/reopen-account?userId=<%= userId %>" method="POST" style="display:inline;">
+                      <form action="/reopen-account" method="POST" style="display:inline;">
                         <input type="hidden" name="accountId" value="<%= account.id %>">
                         <button type="submit" class="reopen-account">Genåbn Konto</button>
                       </form>
@@ -104,7 +104,7 @@
     <!-- Opret ny konto -->
     <div id="createAccountContainer">
       <h2>Opret ny konto</h2>
-      <form action="/create-account?userId=<%= userId %>" method="POST">
+      <form action="/create-account" method="POST">
         <input type="hidden" name="userId" value="<%= userId %>">
         <label>Kontonavn:</label>
         <input type="text" name="name" required>
