--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -35,6 +35,6 @@
     </tbody>
   </table>
 
-  <a href="/accounts?userId=<%= account.user_id %>">Tilbage til konti</a>
+  <a href="/accounts">Tilbage til konti</a>
 </body>
 </html>
